--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="obj"></div>
     </div>
     </div>
-<script src="script/script.js"></script>
+<script src="/script/script.js"></script>
 
 
 
