--- a/Html/home.html
+++ b/Html/home.html
@@ -26,7 +26,7 @@
         <figure>
         <img src="../Images/dumbells.jpg">
         <img src="../Images/Makeup.jpg">
-        <img src="../Images/Food.jpg">
+        <img src="../Images/food.jpg">
         <img src="../Images/Spa.jpg">
         <img src="../Images/dumbells.jpg">
         </figure>
