--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="CSS/new.css">
+    <link rel="stylesheet" href="/CSS/new.css">
 
   </head>
   <body>
